objects/Affiliation__c.object
<CustomObject>
    <description>A junction object allowing Contact to be related to many Accounts. The decision was made to create a custom object and not use AccountContactRelation object due to the latter&apos;s requirement of a direct/primary Account, which presented numerous integration challenges.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ACV Users</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Use this field to indicate whether the Affiliation is still active. It is best practice to not delete Affiliations, but mark them as Active or not appropriately.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associated Accounts</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If applicable, enter the date when the Affiliation ended.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Historical_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field indicating that this record was part of a historical Load</description>
        <label>From Historical Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if this member should receive email communications.</description>
        <label>Receive Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if this member should receive mobile push notifications.</description>
        <label>Receive Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date that the Affiliation began.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&quot;admin&quot;</defaultValue>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>rep</fullName>
                </value>
                <value>
                    <fullName>admin</fullName>
                    <default>true</default>
                    <label>admin</label>
                </value>
                <value>
                    <fullName>backoffice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>Unique Id in ACV databases - used for integration purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Dealership Member Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>primary_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <label>Affiliation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Affiliation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_change_Affiliation_lookups</fullName>
        <active>false</active>
        <description>After an affiliation is created you cannot change the look ups after the fact. Only delete and recreate</description>
        <errorConditionFormula>ISCHANGED(Account__c) || ISCHANGED(Contact__c)</errorConditionFormula>
        <errorMessage>Cannot change the Account or Contact lookups on an affiliation record after is been created. If this record contains a mistake, please delete and recreate the record with the correct lookups.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Record_Must_be_ACV_User</fullName>
        <active>false</active>
        <description>The Contact of the affiliation must be an ACV User record type</description>
        <errorConditionFormula>NOT(Contact__r.RecordType.DeveloperName=&apos;ACV_User&apos;)</errorConditionFormula>
        <errorMessage>Contact affiliation must be an ACV User contact Record Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Standard_Account_must_have_dealerId</fullName>
        <active>false</active>
        <description>Account associated to Contact must have dealerId populated</description>
        <errorConditionFormula>Account__r.RecordType.DeveloperName=&apos;Standard&apos; &amp;&amp; IsBlank(Account__r.Dealership_ID__c)</errorConditionFormula>
        <errorMessage>Affiliation to a Standard Account type must have a Dealership Id</errorMessage>
    </validationRules>
</CustomObject>